packages/forge-dsl/fixtures/errors/e06-const-reassign.fable
// expect: FORGE307
CONST king = "Leo"

-> coup
=== coup ===
~ king = "Scar"
The throne changes paws: {king}.
-> END
